# grx

./: .clang-format  .editorconfig  .gitattibutes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING.GRX  COPYING.MIT  COPYING.UNICODE  Makefile.am  README.md  autogen.sh  configure  configure.ac  configure.old  copying.grx  format.sh  grx-3.0.pc.in  grx-3.0Config.cmake.in  grx.pc.in  makedefs.bcc  makedefs.dec  makedefs.dj1  makedefs.dj2  makedefs.gnu  makedefs.grx  makedefs.w32  makedefs.x11  makefile.bcc  makefile.dj1  makefile.dj2  makefile.lnx  makefile.sdl  makefile.w32  makefile.wat  makefile.x11  readme  release-doc.sh  release.sh  (+2 more)
doc/gtkdoc/: CMakeLists.txt  grx-docs.xml.in
doc/man/: CMakeLists.txt  grx-calibrate-touch.rst
doc/valadoc/: CMakeLists.txt
doc/yelp/: CMakeLists.txt
example/javascript/: CMakeLists.txt  boxes.js  circles.js  demo.js  ellipses.js  fonts.js  intl.js  life.js  lines.js  pixels.js
example/python/: CMakeLists.txt  boxes.py  circles.py  demo.py  ellipses.py  fonts.py  input.py  intl.py  life.py  lines.py  paint.py  pixels.py
example/vala/: CMakeLists.txt  boxes.vala  calibrate.vala  circles.vala  demo.vala  ellipses.vala  life.vala  lines.vala  pixels.vala
src/: CMakeLists.txt  Makefile.am  depend.bcc  depend.dj2  depend.lnx  depend.w32  depend.x11  fonts.conf  grx.pc.in  makebase.dj  makefile.bcc  makefile.dj1  makefile.dj2  makefile.lnx  makefile.sdl  makefile.w32  makefile.wat  makefile.x11  marshal.list  stdobjs.mak
src/application/: application.c  gtk3.c  linux_console.c
src/bgi/: bar.c  bar3d.c  bccgrx.c  bccgrx00.h  bgiext01.c  bgiext02.c  bgimode.c  bgiprint.c  bin2c.c  clrdev.c  egacolor.c  ellipse.c  fellipse.c  fillpolb.c  fldfill.c  getfillp.c  gpalsize.c  gpc_init.c  gpc_text.c  graphres.c  lnestyle.c  modename.c  palette.c  polygonb.c  putimage.c  rgbpal_g.c  rgbpal_s.c  sector.c  setbgiwh.c  setrgbc.c  setviewp.c  text.h  text1.c  text3.c  text4.c  text5.c  text7.c  texta.c  textc.c  textd.c
src/draw/: bitblt.c  bitblt1b.c  bitbltnc.c  box.c  boxnc.c  clear.c  clearclp.c  clearctx.c  clearscr.c  drwinlne.c  fillbox.c  fillboxn.c  flodspil.c  frambox.c  framboxn.c  getscl.c  line.c  linenc.c  majorln.c  majorln1.c  majorln2.c  majorln3.c  majorln4.c  pixel.c  pixelc.c  plot.c  putscl.c  roundbox.c  strchblt.c
src/events/: events.c
src/fdrivers/: banked32.h  dotab8.c  driver16.h  driver24.h  driver32.h  driver8.h  ega4.c  egavga1.c  fd_win32.c  fd_xwin.c  fdw32_24.c  fdw32_8.c  ftable.c  genblit.c  gengiscl.c  genptscl.c  genstrch.c  herc1.c  lfb16.c  lfb24.c  lfb32h.c  lfb32l.c  lfb8.c  lfbbltrv.c  lfbbltvr.c  lfbbltvv.c  lnxfb16.c  lnxfb32.h  lnxfb32h.c  lnxfb32l.c  pblit_nb.h  pblitr2r.c  pblitr2v.c  pblitv2r.c  pblitv2v.c  ram1.c  ram16.c  ram2.c  ram24.c  ram32h.c  (+20 more)
src/fonts/: fdtable.c  fdv_bgi.c  fdv_bgi.h  fdv_fna.c  fdv_grx.c  fdv_grx.h  fdv_raw.c  fdv_raw.h  fdv_win.c  fdv_win.h  fdv_xwin.c  pc6x8.c  pc8x14.c  pc8x16.c  pc8x8.c  px11x22.c  px14x28.c  px8x18.c
src/gcursors/: bldcurs.c  drawcurs.c
src/gformats/: ctx2jpg.c  ctx2png.c  ctx2pnm.c  dummyjpg.c  dummypng.c  jpg2ctx.c  png2ctx.c  pnm2ctx.c
src/grgui/: cdialogs.c  dialogs.c  gcontext.c  grguip.h  group.c  menubar.c  menus.c  object.c  obutton.c  odlist.c  oentry.c  olabel.c  olight.c  olist.c  oreglist.c  otext.c  panels.c  rawdl.c  rawdl2.c  scrollbar.c  setup.c  shortcut.c  textarea.c  tiles.c  utility.c
src/i18n/: gri18n.c
src/image/: ialloc.c  ibuild.c  ifbox.c  ihline.c  iinverse.c  image.h  imginlne.c  iplot.c  istretch.c
src/include/: access24.h  alloca.h  allocate.h  arith.h  banking.h  clipping.h  colors.h  docolor.h  globals.h  grxdebug.h  gtk3_device.h  gtk3_device_manager.h  highlow.h  int86.h  ioport.h  libgrx.h  libinput_device_manager.h  libsdl.h  libwin32.h  libxwin.h  memcopy.h  memfill.h  memmode.h  mempeek.h  mouse.h  ordswap.h  pblit.h  prex11r6.h  scanline_buf.h  shapes.h  usercord.h  usrscale.h  util.h  vesa.h  vgaregs.h
src/input/: .directory  auxintl.c  device.c  device_manager.c  grev_dj2.c  grev_lnx.c  grev_w32.c  grev_x11.c  grevent.c  gtk3_device.c  gtk3_device_internal.h  gtk3_device_manager.c  libinput_device.c  libinput_device_internal.h  libinput_device_manager.c  mouinlne.c  mscursor.c  ninput.h  recode.c  w32keys.h  x11keys.h
src/misc/: dj2delay.c  dosmisc.c  lnxmisc.c  sdlmisc.c  w32misc.c  x11misc.c
src/mouse/: bldcurs.c  dosinput.c  doskeys.c  drawcurs.c  input.h  lnxinpu2.c  lnxinput.c  lnxkbd.h  lnxkeys.c  mouinfo.c  mouinlne.c  mscursor.c  mstime.c  sdlinp.c  sdlinput.h  sdlkeys.c  w32inp.c  w32input.h  w32keys.c  xwininp.c  xwinkeys.c  xwinkeys.h  xwinkeys.old
src/newfdrv/: ndrvr32.h  nram32h.c  nram32l.c
src/pattern/: fillpatt.c  gradient.c  makepat.c  pataligf.c  patfbits.c  patfbox.c  patfcirc.c  patfcvxp.c  patfline.c  patfplot.c  patfpoly.c  pattcirc.c  patternf.c  pattfldf.c  pattline.c  pattpoly.c  pfcirc.c  pfcirca.c  pfelli.c  pfellia.c  pixdsply.c  pixtrans.c  ptcirc.c  ptcirca.c  ptelli.c  ptellia.c  scanpatt.c
src/pnm/: ctx2pnm.c
src/setup/: clip.c  clrinfo.c  clrinlne.c  colorbw.c  colorega.c  colors.c  colortbl.c  context.c  cxtinfo.c  cxtinlne.c  dpi.c  drvinfo.c  drvinlne.c  fframe.c  fgeom.c  hooks.c  iniencod.c  modewalk.c  setdrvr.c  setmode.c  version.c  viewport.c
src/shape/: circle.c  circle1.c  circle2.c  circle3.c  circle4.c  drawpoly.c  fillcir1.c  fillcir2.c  fillcirc.c  fillcnvx.c  fillell1.c  fillell2.c  fillpoly.c  flood.c  floodfil.c  genellip.c  genpoints.c  polyedge.h  polygon.c  (+5 more)
test/: .directory  CMakeLists.txt  arctest.c  bb1test.c  biggtest.c  blittest.c  circtest.c  cliptest.c  clrtable.c  colorops.c  curstest.c  cusptest.c  demogrx.c  demointl.c  demomgrx.c  depend.bcc  depend.dj2  depend.gnu  depend.x11  drawing.h  fnt2c.c  fnt2text.c  fontdemo.c  fonttest.c  fswwtest.c  gfaz.c  gfaz.h  gradtest.c  i18ntest.c  imgtest.c  jpgtest.c  keys.c  life.c  life_db.c  linetest.c  loop.h  makefile.bcc  makefile.dj1  makefile.dj2  makefile.lnx  (+27 more)
tools/: CMakeLists.txt  calibrate-touch.vala  calibrate.vala  keysyms_codegen.py  unicode_codegen.py
(+7339 files in other folders)
